--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ ul {
     margin-left: 50px;
     margin-right: 50px;
 }
+
+.content-container2{
+
+}
+
+
+
 .desc-text {
     width: 400px;
     border: 2px solid #1e1e1c; 
